<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myScene"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/myScene"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/btnt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/btnt1"
        app:layout_constraintEnd_toStartOf="@+id/btnt2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btnt1" />

    <ImageButton
        android:id="@+id/btnt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/btnt2"
        app:layout_constraintEnd_toStartOf="@+id/btnt3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnt1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btnt2" />

    <ImageButton
        android:id="@+id/btnt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/btnt3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnt2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btnt3" />

    <TextView
        android:id="@+id/explain"
        android:layout_width="183dp"
        android:layout_height="145dp"
        android:layout_marginBottom="356dp"
        android:text="@string/this_is_to_demonstrate_various_size_layouts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>